--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -72,6 +72,12 @@
     <Compile Include="FormSign_in.Designer.cs">
       <DependentUpon>FormSign_in.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainFormChat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainFormChat.Designer.cs">
+      <DependentUpon>MainFormChat.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData.cs" />
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormSign_in.resx">
       <DependentUpon>FormSign_in.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainFormChat.resx">
+      <DependentUpon>MainFormChat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
