--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -60,6 +60,21 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107230941319_new.cs" />
+    <Compile Include="Migrations\202107230941319_new.designer.cs">
+      <DependentUpon>202107230941319_new.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107231050122_new1.cs" />
+    <Compile Include="Migrations\202107231050122_new1.designer.cs">
+      <DependentUpon>202107231050122_new1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserChats.cs" />
     <Compile Include="DBContext.cs" />
     <Compile Include="FormLog_in.cs">
       <SubType>Form</SubType>
@@ -79,9 +94,14 @@
     <Compile Include="MainFormChat.Designer.cs">
       <DependentUpon>MainFormChat.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessagesChats.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormLog_in.resx">
       <DependentUpon>FormLog_in.cs</DependentUpon>
     </EmbeddedResource>
@@ -90,6 +110,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainFormChat.resx">
       <DependentUpon>MainFormChat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107230941319_new.resx">
+      <DependentUpon>202107230941319_new.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107231050122_new1.resx">
+      <DependentUpon>202107231050122_new1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
