--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -60,11 +60,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormMyAccount.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormMyAccount.Designer.cs">
+      <DependentUpon>FormMyAccount.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\202107230941319_new.cs" />
     <Compile Include="Migrations\202107230941319_new.designer.cs">
@@ -99,8 +99,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormMyAccount.resx">
+      <DependentUpon>FormMyAccount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLog_in.resx">
       <DependentUpon>FormLog_in.cs</DependentUpon>
