--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -60,6 +60,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormCreatNewChat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCreatNewChat.Designer.cs">
+      <DependentUpon>FormCreatNewChat.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMyAccount.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +79,10 @@
     <Compile Include="Migrations\202107231050122_new1.cs" />
     <Compile Include="Migrations\202107231050122_new1.designer.cs">
       <DependentUpon>202107231050122_new1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107260755173_newMig.cs" />
+    <Compile Include="Migrations\202107260755173_newMig.designer.cs">
+      <DependentUpon>202107260755173_newMig.cs</DependentUpon>
     </Compile>
     <Compile Include="UserChats.cs" />
     <Compile Include="DBContext.cs" />
@@ -99,6 +109,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData.cs" />
+    <EmbeddedResource Include="FormCreatNewChat.resx">
+      <DependentUpon>FormCreatNewChat.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMyAccount.resx">
       <DependentUpon>FormMyAccount.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107231050122_new1.resx">
       <DependentUpon>202107231050122_new1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107260755173_newMig.resx">
+      <DependentUpon>202107260755173_newMig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
